Lower required Java version from 17 to 11
Replace the two Java 16+ language features (record type and Stream.toList())
with Java 11-compatible equivalents to broaden runtime compatibility.

- Convert ArtifactCoordinates record to a static inner class
- Replace Stream.toList() with .collect(Collectors.toList())
- Update maven.compiler.source/target and javadoc source to 11